overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 .wrapper{
 	overflow: hidden;
-	position: static;
+
 }
 
 
